# fileharbor

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  inventory  pyproject.toml
analyser/: config.json  config.toml  pyproject.toml
analyser/src/analyser/: client.py  search.py  server.py  shared_object.py
analyser/src/analyser/database/: filesystem_database.py  valkey_database.py
analyser/src/analyser/inference/: __init__.py  inference_server.py
analyser/src/analyser/inference/inference_plugins/: ray_serve.py
analyser/src/analyser/jobs/: __init__.py  indexing.py  search.py
analyser/src/analyser/plugins/: __init__.py  compute_plugin.py  indexer_plugin.py  mapping_plugin.py
analyser/src/analyser/plugins/compute/: byol_wikipedia.py  clip_classifier.py  clip_image.py  clip_text.py  iconclass_clip.py  iconclass_lstm.py  imagenet_inception.py  imagenet_resnet.py  imet2020_resnet.py  kaggle_classifier.py  kaggle_dense.py  kaggle_embedding.py  multilingual_clip_text.py  test_plugin.py  yuv_histogram.py
analyser/src/analyser/plugins/indexer/: qdrant_indexer.py
analyser/src/analyser/plugins/mapping/: feature_cosine.py  feature_l2.py  gaussian_mixture.py  k_means.py  umap.py
analyser/src/analyser/services/: __init__.py  analyser.py  collection.py  searcher.py
analyser/src/analyser/tools/: dataset_add_triplets.py  dataset_stats.py  parse_wikidata_harvester.py
analyser/src/analyser/utils/: __init__.py  download.py  proto.py
analyser/src/analyser/utils/cache/: cache.py
analyser/src/analyser/utils/data/: __init__.py
(+66 files in other folders)
