[project]
name = "analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.70.0",
    "imageio>=2.37.0",
    "h5py",
    "interface",
    "data",
    "msgpack>=1.1.0",
    "packaging>=24.2",
    "pip>=25.0.1",
    "protobuf==5.29.6",
    "qdrant-client>=1.13.2",
    "ray[serve]==2.47.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "valkey>=6.1.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.uv.sources]
interface = { workspace = true }
data = { workspace = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
